--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "mon-dieu-elements": "0.0.5",
     "node-sass": "^4.13.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-scripts": "3.3.1",
     "styled-components": "^5.0.1"
   },
