--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.3.1",
-    "styled-components": "^5.0.1"
+    "react-scripts": "3.4.0",
+    "styled-components": "^5.0.1",
+    "webpack": "^4.41.5"
   },
   "scripts": {
     "start": "react-scripts start",
